--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "directories": {
     "test": "test"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/btford/passive-voice.git"
+  },
   "scripts": {
     "test": "./node_modules/.bin/jasmine-node test"
   },
